--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "hubot": "2.2.0",
     "hubot-scripts": ">=2.0.8",
-    "hubot-irc": "0.0.8",
+    "hubot-xmpp": "0.0.6",
     "optparse": "1.0.3"
   },
 
