--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "hubot-scripts": ">=2.0.8",
     "hubot-irc": "0.0.8",
     "optparse": "1.0.3",
-    "crypto", "0.0.3",
-    "githubot", "0.2.0"
+    "crypto": "0.0.3",
+    "githubot": "0.2.0"
   },
 
   "engines": {
