--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name":        "hubot",
   "version":     "2.3.2",
   "author":      "hubot",
-  "keywords":    "github hubot campfire bot",
+  "keywords":    "Belly hubot IRC bot",
   "description": "A simple helpful Robot for your Company",
   "licenses":     [{
     "type":       "MIT",
@@ -17,13 +17,22 @@
   "dependencies": {
     "coffee-script": "1.3.3",
     "optparse": "1.0.3",
+    "hubot-scripts": ">=2.0.8",
+    "hubot-irc": "0.0.8",
     "scoped-http-client": "0.9.7",
     "log": "1.3.0",
     "connect": "2.3.4",
-    "connect_router": "1.8.6"
+    "connect_router": "1.8.6",
+    "crypto": "0.0.3",
+    "githubot": "0.2.0
   },
 
   "main": "./index",
+
+  "engines": {
+    "node": "0.6.x",
+    "npm": "1.0.x"
+  },
 
   "bin": {
     "hubot": "./bin/hubot"
